--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<li><a href="#faq">Frequently Asked Questions =></a></li>
         <li><a href="#contact">Get in touch! =></a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
-		            <li><a href="http://linkedup-challenge.org/usecases.html">Use Cases</a></li>
+		            <li><a href="http://linkedup-challenge.org/usecasesvidi.html">Use Cases</a></li>
       </ul></h3>
 	</div>
       
@@ -118,7 +118,7 @@
 
 <p><h3>We have compiled a <a target="_blank" href="http://data.linkededucation.org/linkedup/catalog/">catalogue of data sets</a> to get you started. </h3></p>
 			<p><h3>The idea is to mash up the vast amount of material and data on the internet that can be used in education, ranging from course data, lecture slides, and online courses to Wikipedia articles and YouTube videos. </h3></p>
-		<p><h3>You might design a tool for combining datasets and visualising them in interesting new ways, or perhaps develop a search engine that combines search results from different libraries. Please see our <a href="http://linkedup-challenge.org/usecases.html">use cases</a> and the <a href=http://linkedup-challenge.org>Veni submissions</a>
+		<p><h3>You might design a tool for combining datasets and visualising them in interesting new ways, or perhaps develop a search engine that combines search results from different libraries. Please see our <a href="http://linkedup-challenge.org/usecasesvidi.html">use cases</a> and the <a href="http://linkedup-challenge.org/veni.html">Veni submissions</a>
  if you are looking for further inspiration.</h3></p>
 
 			 <p> <h3>Alternatively, you may already have an idea that you’ve started developing and  we're keen to help you take this further.</h3></p>
