--- a/focused.html
+++ b/focused.html
@@ -74,8 +74,8 @@
     <li><b>Focused Tracks</b></li>
         <li><a href="#simplificator">Simplificator =></a></li>
       <li><a href="#pathfinder">Pathfinder =></a></li>
-              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
-		            <li><a href="http://linkedup-challenge.org/usecases.html">Use Cases</a></li>
+  <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
+		                         <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
       </ul>
 	</div>
       
