--- a/usecases.html
+++ b/usecases.html
@@ -69,14 +69,14 @@
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
  
         <li><a href="http://linkedup-challenge.org/">LinkedUp Challenge</a></li>
-      
-              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
+                      <li><a href="http://linkedup-challenge.org/focused.html">Focused Tracks</a></li>
 		            <li><b>Use Cases</a></b></li>
 		             <li><a href="http://linkedup-challenge.org/usecases.html#teachinggoingsocial">Teaching going social =></a></li>
         <li><a href="http://linkedup-challenge.org/usecases.html#educationizer">Educationizer =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#simplify">Simplify =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#supportingemployeesgrowth">Supporting Employees' =></a></li>
                 <li><a href="http://linkedup-challenge.org/usecases.html#apps">App ideas =></a></li>
+                              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
       </ul>
 	</div>
       
