--- a/veni.html
+++ b/veni.html
@@ -67,8 +67,11 @@
  	  <div class="nav-collapse">
 		<ul id="nav" class="nav">
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
+                    
+                         <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
+                           <li><a href="http://linkedup-challenge.org/focused.html">Focused Tracks</a></li>
         		            <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
-       <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>
+    
               <li><b>Veni Competition</b></li>
                  <li><a href="http://linkedup-challenge.org/veni.html#abstracts">Abstracts =></a></li>
 
