--- a/focused.html
+++ b/focused.html
@@ -18,7 +18,7 @@
 <script type="text/javascript" src="js/thickbox.js"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/js/bootstrap.min.js"></script>
 
-  <title>LinkedUp Challenge: Veni Competition: Focused Tracks</title>
+  <title>LinkedUp Challenge: Vidi Competition: Focused Tracks</title>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript"></script>
   <script src="js/cufon.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/comicsans.js" type="text/javascript" charset="utf-8"></script>
