--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
  if you are looking for further inspiration.</h3></p>
 
 			 <p> <h3>Alternatively, you may already have an idea that you’ve started developing and  we're keen to help you take this further.</h3></p>
-<p><h3>If you are interested in submitting something for the Vidi competition then please <a href="https://docs.google.com/a/okfn.org/forms/d/1snz3QdGrD20-uIusn_MjDSmcU7R_HSAKIXT9JHgipBA/viewform">fill in our online form</a> and indicate if you have any questions or areas we could help you with.</h3></p>
+<p><h3>If you are interested in submitting something for the Vidi competition then please <a href="https://docs.google.com/a/okfn.org/forms/d/1snz3QdGrD20-uIusn_MjDSmcU7R_HSAKIXT9JHgipBA/viewform">fill in our online 'expression of interest' form</a> and indicate if you have any questions or areas we could help you with.</h3></p>
 
 <p><h3><strong>Vidi Tracks</strong></h3></p>
 
