--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -171,7 +171,7 @@ is a project co-funded by EC under the ICT-PSP programme which suggests a coordi
                   <div id="semagrow" name="semagrow" class="block">
               <div class="usecase_title"><h1>Simplify</h1></div>
                           <h2>Proposer</h2>
-              <p><h3><img align="right" src="http://lakelandsumagrow.com/attachments/Image/vsmall_Sumagrow-14893_2.JPG?template=generic"  height="100"/><a href="http://www.sumagrow.org"> SemaGrow</a>                          
+              <p><h3><img align="right" src="images/semagrow.png"  height="100"/><a href="http://www.sumagrow.org"> SemaGrow</a>                          
 is a project co-funded by the Seventh Framework Programme (FP7) of the European Commision (FP7-ICT-2011.4.4a Intelligent Information Management).</h3></p>
                           
                           <h2>Context</h2>
