--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -172,7 +172,7 @@ is a project co-funded by EC under the ICT-PSP programme which suggests a coordi
                   <div id="semagrow" name="semagrow" class="block">
               <div class="usecase_title"><h1>Simplify</h1></div>
                           <h2>Proposer</h2>
-              <p><h3><img align="right" src="images/semagrow.png" /><a href="http://www.sumagrow.org"> SemaGrow</a>                          
+              <p><h3><img align="right" src="images/semagrow.png" /><a href="http://www.sumagrow.org">SemaGrow</a>                          
 is a project co-funded by the Seventh Framework Programme (FP7) of the European Commision (FP7-ICT-2011.4.4a Intelligent Information Management).</h3></p>
                           
                           <h2>Context</h2>
@@ -228,7 +228,7 @@ is a project realizing a meta-museum via a semantic collection of over 17,000 wo
                   <div id="local" name="local" class="block">
               <div class="usecase_title"><h1> Local and Hyper-Local Learning</h1></div>
                           <h2>Proposer</h2>
-              <p><h3>The <img align="right" src="http://static.bbci.co.uk/frameworks/barlesque/2.51.6/orb/4/img/bbc-blocks-dark.png"><a href="http://www.bbc.co.uk">BBC</a> is the UK’s Public Service broadcaster and the world’s largest broadcaster. It has been committed to education and learning since its first schools broadcast in 1924. This commitment is part of its core mission and drives much of its output.</h3></p>	      
+              <p><h3>The <img align="right" src="images/bbc.png"><a href="http://www.bbc.co.uk">BBC</a> is the UK’s Public Service broadcaster and the world’s largest broadcaster. It has been committed to education and learning since its first schools broadcast in 1924. This commitment is part of its core mission and drives much of its output.</h3></p>	      
 
 <p><h3>The BBC's strategy for learning is 'to inspire a life of learning for everyone' by exploiting the educative potential that exists across the full range of the BBC's output and activities, from news to music, science to the arts, sport and drama.</h3></p>
 
