--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
  
         <li><b>LinkedUp Challenge</b></li>
         <li><a href="#vidi">Vidi Competition =></a></li>
+        <li><a href="#tracks"><em>Tracks</em></a></li>
         <li><a href="#how">How to enter =></a></li>
 		<li><a href="#support">Data and support =></a></li>
 		<li><a href="#faq">FAQs =></a></li>
@@ -123,7 +124,9 @@
  if you are looking for further inspiration.</h3></p>
 
 			 <p> <h3>Alternatively, you may already have an idea that you’ve started developing and  we're keen to help you take this further.</h3></p>
+  <!-- .block -->
 
+		  <div id="tracks" name="tracks" class="block">
 <p><h3><strong>Vidi Tracks</strong></h3></p>
 
 <p><h3>The Vidi competition comprises of three tracks: </h3></p>
