--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
  
         <li><b>LinkedUp Challenge</b></li>
         <li><a href="#vidi">Vidi Competition =></a></li>
-        <li><a href="#tracks"><em>Tracks</em></a></li>
+        <li><a href="#tracks">Tracks =></a></li>
         <li><a href="#how">How to enter =></a></li>
 		<li><a href="#support">Data and support =></a></li>
 		<li><a href="#faq">FAQs =></a></li>
