--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
  if you are looking for further inspiration.</h3></p>
 
 			 <p> <h3>Alternatively, you may already have an idea that you’ve started developing and  we're keen to help you take this further.</h3></p>
+			 </div>
   <!-- .block -->
 
 		  <div id="tracks" name="tracks" class="block">
