--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
   <!-- .block -->
 
 		  <div id="tracks" name="tracks" class="block">
-<p><h3><strong>Vidi Tracks</strong></h3></p>
+<h1>Vidi Tracks</strong></h1>
 
 <p><h3>The Vidi competition comprises of three tracks: </h3></p>
 
