--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -130,7 +130,7 @@
               <div class="usecase_title"><h1>Science Educationizer for Interdisciplinary Content & Data</h1></div>
                           <h2>Proposer</h2>
 
-<p><h3><img align="right" src="images/elsevier.png" /><a href=” http://www.elsevier.com” >Elsevier</a> is a world-leading provider of scientific, technical and medical information products and services. The company works in partnership with the global science and health communities to publish more than 2,000 journals, including The Lancet and Cell, and close to 20,000 book titles, including major reference works from Mosby and Saunders. Elsevier’s online solutions include ScienceDirect, Scopus, Reaxys, ClinicalKey and Mosby’s Nursing Suite, which enhance the productivity of science and health professionals, and the SciVal suite and MEDai's Pinpoint Review, which help research and health care institutions deliver better outcomes more cost-effectively.</h3></p>
+<p><h3><img align="right" src="images/logo-elsevier.jpg" height="100"/><a href="http://www.elsevier.com">Elsevier</a> is a world-leading provider of scientific, technical and medical information products and services. The company works in partnership with the global science and health communities to publish more than 2,000 journals, including The Lancet and Cell, and close to 20,000 book titles, including major reference works from Mosby and Saunders. Elsevier’s online solutions include ScienceDirect, Scopus, Reaxys, ClinicalKey and Mosby’s Nursing Suite, which enhance the productivity of science and health professionals, and the SciVal suite and MEDai's Pinpoint Review, which help research and health care institutions deliver better outcomes more cost-effectively.</h3></p>
 
 <h2>Context</h2>
 <p><h3>A plethora of educational and informative resources already exist, in several heterogeneous formats, accessible at different levels and conditions – freely available online; from repositories accessed via API, under subscriptions/fees, etc…</h3></p>
@@ -172,7 +172,7 @@ is a project co-funded by EC under the ICT-PSP programme which suggests a coordi
                   <div id="semagrow" name="semagrow" class="block">
               <div class="usecase_title"><h1>SemaGrow</h1></div>
                           <h2>Proposer</h2>
-              <p><h3><img align="right" src="images/semagrow.png" /><a href="http://www.sumagrow.org">SemaGrow</a>                          
+              <p><h3><img align="right" src="images/semagrow.jpg" height="100" /><a href="http://www.sumagrow.org">SemaGrow</a>                          
 is a project co-funded by the Seventh Framework Programme (FP7) of the European Commision (FP7-ICT-2011.4.4a Intelligent Information Management).</h3></p>
                           
                           <h2>Context</h2>
@@ -228,7 +228,7 @@ is a project realizing a meta-museum via a semantic collection of over 17,000 wo
                   <div id="local" name="local" class="block">
               <div class="usecase_title"><h1> Local and Hyper-Local Learning</h1></div>
                           <h2>Proposer</h2>
-              <p><h3>The <img align="right" src="images/bbc.png"><a href="http://www.bbc.co.uk">BBC</a> is the UK’s Public Service broadcaster and the world’s largest broadcaster. It has been committed to education and learning since its first schools broadcast in 1924. This commitment is part of its core mission and drives much of its output.</h3></p>	      
+              <p><h3>The <img align="right" src="images/bbc.jpg" height="100" /><a href="http://www.bbc.co.uk">BBC</a> is the UK’s Public Service broadcaster and the world’s largest broadcaster. It has been committed to education and learning since its first schools broadcast in 1924. This commitment is part of its core mission and drives much of its output.</h3></p>	      
 
 <p><h3>The BBC's strategy for learning is 'to inspire a life of learning for everyone' by exploiting the educative potential that exists across the full range of the BBC's output and activities, from news to music, science to the arts, sport and drama.</h3></p>
 
