Updated SemaGrow logo

--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -172,8 +172,8 @@ is a project co-funded by EC under the ICT-PSP programme which suggests a coordi
                   <div id="semagrow" name="semagrow" class="block">
               <div class="usecase_title"><h1>SemaGrow</h1></div>
                           <h2>Proposer</h2>
-              <p><h3><img align="right" src="images/sumagrow.jpg" height="100" /><a href="http://www.sumagrow.org">SemaGrow</a>                          
-is a project co-funded by the Seventh Framework Programme (FP7) of the European Commision (FP7-ICT-2011.4.4a Intelligent Information Management).</h3></p>
+              <p><h3><img align="right" src="images/SemaGrow_large.png" height="50" /><a href="http://www.semagrow.eu">SemaGrow</a>                          
+is a project co-funded by the Seventh Framework Programme of the European Commission (FP7-ICT-2011.4.4a Intelligent Information Management).</h3></p>
                           
                           <h2>Context</h2>
               <p><h3> As the trend to open up data and provide them freely on the Internet intensifies, the opportunities to create added value by combining and cross-indexing heterogeneous data at a large scale increase.  To seize them, SemaGrow envisages developing scalable, efficient, and robust data services to take full advantage of the data-intensive and inter-disciplinary Science of 2020 and to re-shape the way that data analysis techniques are applied to the heterogeneous data cloud.
