Updated data and support section with Mathieu's suggestions

--- a/index.html
+++ b/index.html
@@ -188,7 +188,15 @@
 			  
               <p><h3>We don’t want you to feel limited by the datasets we've catalogued. Your application can use any open and/or linked data! For example, you can use the wealth of cultural resources from <a target="_blank" href="http://www.europeana.eu">Europeana</a>, which is available both as <a target="_blank" href="http://pro.europeana.eu/linked-open-data">Linked data</a> and via a <a target="_blank" href="http://www.europeana.eu/portal/api-introduction.html">REST API</a>.</h3></p>
 			  
-              <p><h3>By joining the Challenge you will benefit from <strong>dedicated support and guidance</strong> offered by the LinkedUp team. We are providing how-to's, examples and code recipes to all participants, and have a designated <a target="_blank" href="http://data.linkededucation.org/linkedup/devtalk/">developer blog</a>. Contact us via <a href="mailto:contact@linkedup-challenge.org">email</a> with specific questions, or to even submit your code for technical support!</h3></p>
+              <p><h3>We also want to help you to get started with your contribution to the challenge, by providing support and guidance with respect to technical issues, the use of data or any other obstacle that might come your way in creating your application: The more information you get, the better it is going to be! For example, you can get in touch with us through our <a href="http://data.linkededucation.org/linkedup/devtalk/" target="_blank">developer's blog</a>, which contains how-tos, examples and code recipes on the use of linked open data in education. But maybe you have specific questions, such as:</h3></p><br />
+			 <h3><ul>
+			   <li>Is there any data available about the X?</li>
+			   <li>Are there linked data-based tools to do Y?</li>
+			   <li>Where can I get old of data Z?</li>
+			   <li>How do I use SPARQL to do T?</li>
+			   <li>Is doing U OK for the track V?</li>
+			 </ul></h3>
+              <p><h3>Than use our <a href="https://docs.google.com/forms/d/1U4D_A00cfgLIui6H6v-u0VEQwD5kJY-kVRkgfPjBo18/viewform" target="_blank">contact form</a> and somebody from the support team will come back to you shortly. Alternatively, you can reach the support team by <a href="mailto:contact@linkedup-challenge.org">email</a>.</h3></p>
 		</div>
 
         <div id="faq" name="faq" class="block">
