Update menus layout and fixed typo

--- a/focused.html
+++ b/focused.html
@@ -72,8 +72,8 @@
 
     <li><a href="http://linkedup-challenge.org">LinkedUp Challenge</a></li>    
     <li><b>Focused Tracks</b></li>
-        <li><a href="#simplificator">Simplificator =></a></li>
-      <li><a href="#pathfinder">Pathfinder =></a></li>
+        <li><a href="#simplificator"><i>Simplificator</i></a></li>
+      <li><a href="#pathfinder"><i>Pathfinder</i></a></li>
   <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
 		                         <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
       </ul>
