--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
         <h3><li><a href="/"><img src="images/logo.png" width="235" height="59" alt="LinkedUp Challenge" /></a></li>
  
         <li><b>LinkedUp Challenge</b></li>
-        <li><a href="#vidi">Vidi Competition =></a></li>
-        <li><a href="#tracks">Tracks =></a></li>
-        <li><a href="#how">How to enter =></a></li>
-		<li><a href="#support">Data and support =></a></li>
-		<li><a href="#faq">FAQs =></a></li>
-        <li><a href="#contact">Get in touch! =></a></li>
+        <li><a href="#vidi"><i>Vidi Competition</i></a></li>
+        <li><a href="#tracks"><i>Tracks</i></a></li>
+        <li><a href="#how"><i>How to enter</i></a></li>
+		<li><a href="#support"><i>Data and support</i></a></li>
+		<li><a href="#faq"><i>FAQs</i></a></li>
+        <li><a href="#contact"><i>Get in touch!</i></a></li>
                     <li><a href="http://linkedup-challenge.org/focused.html">Focused Tracks</a></li>
          <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
@@ -196,7 +196,7 @@
 			   <li>How do I use SPARQL to do T?</li>
 			   <li>Is doing U OK for the track V?</li>
 			 </ul></h3>
-              <p><h3>Than use our <a href="https://docs.google.com/forms/d/1U4D_A00cfgLIui6H6v-u0VEQwD5kJY-kVRkgfPjBo18/viewform" target="_blank">contact form</a> and somebody from the support team will come back to you shortly. Alternatively, you can reach the support team by <a href="mailto:contact@linkedup-challenge.org">email</a>.</h3></p>
+              <p><h3>Then use our <a href="https://docs.google.com/forms/d/1U4D_A00cfgLIui6H6v-u0VEQwD5kJY-kVRkgfPjBo18/viewform" target="_blank">contact form</a> and somebody from the support team will come back to you shortly. Alternatively, you can reach the support team by <a href="mailto:contact@linkedup-challenge.org">email</a>.</h3></p>
 		</div>
 
         <div id="faq" name="faq" class="block">
