--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -72,11 +72,11 @@
       
 
 		            <li><b>Use Cases</a></b></li>
-<li><a href="http://linkedup-challenge.org/usecases.html#science">Science Educationizer =></a></li>
-<li><a href="http://linkedup-challenge.org/usecases.html#natural">NaturalEurope =></a></li>
-<li><a href="http://linkedup-challenge.org/usecases.html#semagrow">SemaGrow =></a></li>
-<li><a href="http://linkedup-challenge.org/usecases.html#mismuseos">MisMuseos =></a></li>
-<li><a href="http://linkedup-challenge.org/usecases.html#local">Local Learning =></a></li>
+<li><a href="http://linkedup-challenge.org/usecases-vidi.html#science"><i>Science Educationizer</i></a></li>
+<li><a href="http://linkedup-challenge.org/usecases-vidi.html#natural"><i>NaturalEurope</i></a></li>
+<li><a href="http://linkedup-challenge.org/usecases-vidi.html#semagrow"><i>SemaGrow</i></a></li>
+<li><a href="http://linkedup-challenge.org/usecases-vidi.html#mismuseos"><i>MisMuseos</i></a></li>
+<li><a href="http://linkedup-challenge.org/usecases-vidi.html#local"><i>Local Learning</i></a></li>
               <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
 
       </ul>
