Updated evaluation criteria

--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
 		<li><a href="#support"><i>Data and support</i></a></li>
 		<li><a href="#faq"><i>FAQs</i></a></li>
         <li><a href="#contact"><i>Get in touch!</i></a></li>
-                    <li><a href="http://linkedup-challenge.org/focused.html">Focused Tracks</a></li>
-         <li><a href="http://linkedup-challenge.org/usecases-vidi.html">Use Cases</a></li>
-              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
+        <li><a href="focused.html">Focused Tracks</a></li>
+        <li><a href="usecases-vidi.html">Use Cases</a></li>
+        <li><a href="veni.html">Veni Competition</a></li>
 
       </ul></h3>
 	</div>
@@ -142,16 +142,15 @@
 </li><li>Track 2: Pathfinder - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
 </li></ul></h3>
 
-<p><h3>More information to follow</h3></p>
+<p><h3>More information on the <a href="focused.html">focused tracks page</a>.</h3></p>
 	<p><h3><img src="images/trophy.png" height="200px" align="right" /><strong>The prizes:</strong></h3><br />
 			 <h3><ul>
 <li>Open track: €3000 (1st), €2000 (2nd), €1000 (3rd)
 </li><li>Each focused track: €3000 (1st prize)
-</li><li>People's Choice: €1000 
-.</li>
+</li><li>People's Choice: €1000</li>
 </ul></h3> 
 
-<p><h3>The Vidi competition will run from 4th November 2013 till 14th February 2014. Prizes will be awarded at the <a href="http://2014.eswc-conferences.org">European Semantic Web Conference</a> in Crete, Greece in May 2014. </h3></p>
+<p><h3>The Vidi competition will run from 4th November 2013 till 14th February 2014. Prizes will be awarded at the <a href="http://2014.eswc-conferences.org" target="_blank">European Semantic Web Conference</a> in Crete, Greece in May 2014. </h3></p>
 
 <p><h3>Sign up to our low traffic <a href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to receive reminders and hear about LinkedUp Project activity.</h3></p>
 			  
@@ -253,7 +252,22 @@
 
 			  <h2>What are the reviewing criteria?</h2>
 
-              <p><h3>Review criteria include how innovative the prototype or demo is, how usable it is, the quality of the data, whether there is an existing audience or actual use of the application, and how privacy issues are being dealt with. More information can be found on the submission form (not available yet).</h3></p>
+			  <p><h3>Submissions will be evaluated according to these six criteria: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal aspects, 6. Audience. Ideally, submissions would score high on all of these. Below you will find a short description how these criteria can be applied. If you choose to submit to a Focused Track, these will have slightly different evaluation criteria which are detailed on the <a href="focused.html">Focused Tracks page</a>.<br />
+			  <ol>
+			  <li><strong>Educational Innovation</strong><br />
+Your tool should make innovative use of current technologies or even showcase a new technology, providing the users with learning opportunities that match their individual profiles. This would lead to higher learning achievements, increased satisfaction from learning and less time and effort. </li>
+			  <li><strong>Usability</strong><br />
+The user interface should be easy to use, but having an attractive user interface is less important.</li>
+			  <li><strong>Data</strong><br />
+The submission should use at least one dataset; using web data and providing number of resources. Web data is not necessary available on the Web, but we do expect you to use standard Web protocols like REST or SOAP services. Preferably, the application should use at least two other datasets for enriching the resource.</li>
+			  <li><strong>Performance</strong><br />
+The submission should run stable and have a good response time. The tool should scale with the current increase in the number of Web Data-reachable learning opportunities.</li>
+			  <li><strong>Legal aspects</strong><br />
+You should describe if you indicate the provenance of the used data and how do you protect the data of your users and inform them about its usage (Terms-of-use)?  </li>
+			  <li><strong>Audience</strong><br />
+When submitting, you are expected to indicate clearly what the target group is and why. If it can be applied in multiple domains please describe how.</li>
+</ol></h3></p>
+			  
 
 			  <h2>What about Intellectual Property Rights?</h2>
 
