Updated descriptions focused tasks

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 		
         <div id="challenge" name="challenge" class="block">
            <p><h3><strong>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</strong></h3><br />
+		   <iframe width="420" height="315" src="//www.youtube.com/embed/wMRnNmNjdS8?rel=0" frameborder="0" allowfullscreen></iframe>
 <h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to large-scale deployable systems.</h3></p>
 <p><h3>There will be three consecutive competitions. You can enter just one competition or enter them all; participants of the earlier competitions will benefit from support and feedback from the LinkedUp team.
  </h3>  </p><br/>
@@ -138,8 +139,8 @@
 
 <p><h3>Focused tracks</h3></p>
 
-<h3><ul><li>Track 1: Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator FT calls for applications easing access to complex information by summarizing them in a simpler form.
-</li><li>Track 2: Pathfinder - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Recommender FT calls for applications easing access to recommendation and guidance when chosing appropriate curriculum of courses and related resources.</li></ul>
+<h3><ul><li>Track 1: Simplificator - Most knowledge and reports about breakthrough research is by definition domain-specific, however seemingly impenetrable ideas can be made possible to understand by small changes. Simplificator calls for applications easing access to complex information by summarizing them in a simpler form.
+</li><li>Track 2: Pathfinder - Learning opportunities are not always easily discoverable, and rarely come with strong support for identifying, comparing and selecting the ones that can be most beneficial to the (potential) learner. Pathfinder calls for applications easing access to recommendation and guidance when chosing an appropriate curriculum of courses and related resources.</li></ul>
 </li></ul></h3>
 
 <p><h3>More information on the <a href="focused.html">focused tracks page</a>.</h3></p>
@@ -252,7 +253,7 @@
 
 			  <h2>What are the reviewing criteria?</h2>
 
-			  <p><h3>Submissions will be evaluated according to these six criteria: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal aspects, 6. Audience. Ideally, submissions would score high on all of these. Below you will find a short description how these criteria can be applied. If you choose to submit to a Focused Track, these will have slightly different evaluation criteria which are detailed on the <a href="focused.html">Focused Tracks page</a>.<br />
+			  <p><h3>Submissions will be evaluated according to these six criteria: 1. Educational Innovation, 2. Usability, 3. Data, 4. Performance, 5. Legal aspects, 6. Audience. Below you will find a short description how these criteria will be applied. If you choose to submit to a Focused Track, these will have slightly different evaluation criteria which are detailed on the <a href="focused.html">Focused Tracks page</a>.<br />
 			  <ol>
 			  <li><strong>Educational Innovation</strong><br />
 Your tool should make innovative use of current technologies or even showcase a new technology, providing the users with learning opportunities that match their individual profiles. This would lead to higher learning achievements, increased satisfaction from learning and less time and effort. </li>
@@ -289,8 +290,7 @@ When submitting, you are expected to indicate clearly what the target group is a
 				<div class="twitterblock"><a target="_blank" href="https://twitter.com/eelcoherder"><img src="images/EelcoHerder.jpg" /></a><br />Eelco Herder<br /> Challenge Coordinator</div>
 				<div class="twitterblock"><a target="_blank" href="https://twitter.com/HDrachsler"><img src="images/HendrikDrachsler.jpg" /></a><br />Hendrik Drachsler<br /> Evaluation Chair</div>
 				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mdaquin"><img src="images/MathieuDaquin.jpg" /></a><br />Mathieu d’Aquin<br /> Data and Support Coordinator</div>
-				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mariekeguy"><img src="images/MariekeGuy.jpg" /></a><br />Marieke Guy<br /> Dissemination Coordinator</div>
-				<div class="twitterblock"><a target="_blank" href=" https://twitter.com/sandervdwaal "><img src="https://si0.twimg.com/profile_images/2800825093/6dd78762864bc7bfc8b71ebfc31e0aba_bigger.jpeg" /></a><br />Sander Van der Waal<br /> Community Coordinator</div></h3></p>
+				<div class="twitterblock"><a target="_blank" href="https://twitter.com/mariekeguy"><img src="images/MariekeGuy.jpg" /></a><br />Marieke Guy<br /> Dissemination Coordinator</div></h3></p>
 				
 				<br clear="all" />
 				
