--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 		
         <div id="challenge" name="challenge" class="block">
            <p><h3><strong>The LinkedUp Project has 39.500 EUR in prize money for the LinkedUp Challenge; three consecutive competitions looking for interesting and innovative tools and applications that analyse and/or integrate open web data for educational purposes.</strong></h3><br />
-		   <iframe width="420" height="315" src="//www.youtube.com/embed/wMRnNmNjdS8?rel=0" frameborder="0" allowfullscreen></iframe>
+		   <center><iframe width="630" height="472" src="//www.youtube.com/embed/wMRnNmNjdS8?rel=0" frameborder="0" allowfullscreen></iframe></center><br />
 <h3>Aimed at anyone from researchers and students, to developers and businesses, each competition will build upon the previous; leading from innovative prototypes and tools through to large-scale deployable systems.</h3></p>
 <p><h3>There will be three consecutive competitions. You can enter just one competition or enter them all; participants of the earlier competitions will benefit from support and feedback from the LinkedUp team.
  </h3>  </p><br/>
