Updated BBC Use case

--- a/usecases-vidi.html
+++ b/usecases-vidi.html
@@ -72,12 +72,12 @@
       
 
 		            <li><b>Use Cases</a></b></li>
-<li><a href="http://linkedup-challenge.org/usecases-vidi.html#science"><i>Science Educationizer</i></a></li>
-<li><a href="http://linkedup-challenge.org/usecases-vidi.html#natural"><i>NaturalEurope</i></a></li>
-<li><a href="http://linkedup-challenge.org/usecases-vidi.html#semagrow"><i>SemaGrow</i></a></li>
-<li><a href="http://linkedup-challenge.org/usecases-vidi.html#mismuseos"><i>MisMuseos</i></a></li>
-<li><a href="http://linkedup-challenge.org/usecases-vidi.html#local"><i>Local Learning</i></a></li>
-              <li><a href="http://linkedup-challenge.org/veni.html">Veni Competition</a></li>
+<li><a href="#science"><i>Science Educationizer</i></a></li>
+<li><a href="#natural"><i>NaturalEurope</i></a></li>
+<li><a href="#semagrow"><i>SemaGrow</i></a></li>
+<li><a href="#mismuseos"><i>MisMuseos</i></a></li>
+<li><a href="#local"><i>Local Learning</i></a></li>
+              <li><a href="veni.html">Veni Competition</a></li>
 
       </ul>
 	</div>
@@ -235,10 +235,8 @@ is a project realizing a meta-museum via a semantic collection of over 17,000 wo
 <p><h3>Led by the Learning department, the aim is to work with some of the BBC's best known programmes and brands to maximise their learning value and take advantage of the revolution in technology that brings radio, television and the internet ever closer together. Online is key to delivering offerings as well as running events.  </h3></p>
                           
                           <h2>Context</h2>
-              <p><h3 The BBC is developing a new online product with the working title: The Knowledge & Learning (K&L) Product. The K&L Product will deliver relevant BBC learning content to its audiences around content and services they are consuming, when they want it and on whatever platform they are on. The content formats the K&L Product are developing include: text, video, pictures, interactives, quizzes and topical questions and challenges. </h3></p>
 
-<p><h3>One of the challenges the Product is researching is how to deliver meaningful and relevant content to its audience when they are out and about in the real world. In this context ‘relevant’ means related to their geographical location and ‘meaningful’ means something they would find personally interesting, useful and timely locally and hyper-locally.</h3></p>
-
+<p><h3>The BBC is developing a new online product which will deliver relevant BBC learning content to its audiences around content and services they are consuming. The content formats for the product include: text, video, pictures, interactives, quizzes and topical questions and challenges. One of the challenges the product is researching is how to deliver meaningful and relevant content to its audience when they are out and about in the real world. In this context ‘relevant’ means related to their geographical location and ‘meaningful’ means something they would find personally interesting, useful and timely locally and hyper-locally.</h3></p>
 
 <p><h3>Let’s imagine a family out on a day trip – two adults and two children. The children are 8 and 12. During the day they visit a town with an interesting history, a museum in the town, some shops and a remote field which has a monument in the middle of it. During their travels they pass through a number of villages and numerous miles of countryside.
 
