--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 <h3><ul><li>First competition: <b>Veni</b> (March 2013 - September 2013 - has now taken place): Demo prototypes and applications</li><li>Second competition: <b>Vidi</b> (November 2013 - May 2014): Innovative tools and applications</li>
 <li>Third competition: <b>Vici</b> (May 2014 - November 2014): Mature data-driven applications</li></ul></h3>
 
+<p><h3>You can submit the same entry to each of the competitions but it is expected that you will develop your entry further for each successive competition. Alternately you can submit a different entry to each competition i.e. You DO NOT have to have entered a previous competition to submit.</h3></p>
+
 <p><h3>You can join our low traffic <a target="_blank" href="https://www.l3s.de/mailman/listinfo/linkedup-public">public mailing list</a> to receive regular updates and be involved in discussions around linked data, open data, and education.</h3></p>
 
 </div>
